Test something else

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -6,7 +6,7 @@
   </head>
   <body>
       {{> header}}
-      <p>project page text would go here</p>
+      <p>project page text would go here. and i want to test something else.</p>
 
       {{> footer}}
   </body>
